--- a/src/components/FormView.css
+++ b/src/components/FormView.css
@@ -1,13 +1,51 @@
-.form__container{
+body {
+    font-family: "Lato", sans-serif;
+    font-size: 18px;
+    margin: 20px 0;
+}
+
+.form__container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    align-content: center;
+}
+
+.form__container--input-text {
+    width: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /*align-content: center;*/
+}
+
+.form__input-label {
+    /*display: inline-block;*/
+    width: 30%;
+    text-align: right;
+    /*padding-right: 20px;*/
+}
+
+.form__input-text {
+    font-family: "Lato", sans-serif;
+    /*background: rgba(255,255,255,0.1);*/
+    border: none;
+    font-size: 18px;
+    /*height: auto;*/
+    /*margin: 0;*/
+    /*outline: 0;*/
+    padding: 15px;
+    width: 70%;
+    background-color: #ebf5f5;
+    color: #424242;
+    box-shadow: 0 0 5px rgba(73, 78, 92, 0.45);
+    margin: 20px;
 }
 
 .form__btn {
     /*display: block;*/
     font-size: 20px;
-    width: 180px;
+    width: 300px;
     padding: 10px;
     margin: 20px auto;
     text-transform: uppercase;
@@ -16,6 +54,7 @@
     color: #fff;
     border: none;
     transition: all 0.4s;
+    outline: none;
     cursor: pointer;
 }
 
