--- a/src/components/FormErrorsView.css
+++ b/src/components/FormErrorsView.css
@@ -1,5 +1,5 @@
 .form-errors__container {
-    margin: 0;
+    margin: 10px 0 20px 0;
     width: 600px;
     text-align: center;
     font-weight: bold;
