--- a/src/components/FormView.css
+++ b/src/components/FormView.css
@@ -44,6 +44,7 @@ body {
 .form__input-description {
     margin: 0 0 20px;
     font-size: 12px;
+    width: 600px;
 }
 
 .form__container--input-radio-buttons {
@@ -61,7 +62,7 @@ body {
     font-weight: bold;
     width: 600px;
     padding: 10px;
-    margin: 10px auto;
+    margin: 10px 0 5px 0;
     text-transform: uppercase;
     text-align: center;
     color: #fff;
