--- a/src/components/RouteSummary.css
+++ b/src/components/RouteSummary.css
@@ -1,5 +1,5 @@
-.route-summary__container{
-    margin: 0;
+.route-summary__container {
+    margin: 0 auto;
     width: 600px;
 }
 
@@ -12,4 +12,31 @@
 .route-summary__item {
     margin: 0;
     text-align: center;
+}
+
+.route-summary__table {
+    width: 600px;
+}
+
+.route-summary__table-row {
+    border: 1px solid black;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+
+.route-summary__table-heading {
+    font-weight: bold;
+    background: #6765cd;
+    color: #fff;
+}
+
+.route-summary__table-cell {
+    width: 33%;
+    text-align: right;
+    padding: 5px;
+}
+
+.route-summary__table-cell-first {
+    text-align: left;
 }
