--- a/src/components/RouteSummary.css
+++ b/src/components/RouteSummary.css
@@ -25,18 +25,38 @@
     justify-content: space-between;
 }
 
+.route-summary__table-row-100 {
+    border: 1px solid black;
+}
+
 .route-summary__table-heading {
     font-weight: bold;
+    font-size: 18px;
     background: #6765cd;
     color: #fff;
 }
 
-.route-summary__table-cell {
-    width: 33%;
+.route-summary__table-cell,
+.route-summary__table-cell-instr {
+    width: 25%;
     text-align: right;
     padding: 5px;
 }
 
-.route-summary__table-cell-first {
+.route-summary__table-cell-first,
+.route-summary__table-cell-first-instr {
     text-align: left;
+    width: 50%;
+    padding: 5px;
+}
+
+.route-summary__table-cell-first-instr,
+.route-summary__table-cell-instr {
+    font-size: 14px;
+}
+
+.route-summary__table-row-highlight {
+    background: #00c47d;
+    color: #fff;
+    font-weight: bold;
 }
