--- a/src/components/RouteSummary.css
+++ b/src/components/RouteSummary.css
@@ -1,3 +1,9 @@
+.route-summary__loading {
+    margin: 0 auto;
+    text-align: center;
+    color: #6765cd;
+}
+
 .route-summary__container {
     margin: 0 auto;
     width: 600px;
