--- a/src/components/RouteSummary.css
+++ b/src/components/RouteSummary.css
@@ -1,3 +1,9 @@
+h3 {
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+}
+
 .route-summary__loading {
     margin: 0 auto;
     text-align: center;
@@ -66,4 +72,15 @@
     background: #00c47d;
     color: #fff;
     font-weight: bold;
+}
+
+.fa-arrow-circle-left {
+    cursor: pointer;
+    color: #7b64ee;
+    transition: 0.3s all linear;
+}
+
+.fa-arrow-circle-left:hover {
+    transition: 0.3s all;
+    color: #6765cd;
 }
